fix: word-wrap

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ section ul {
 section li {
   padding-left: 1em;
   text-indent: -0.7em;
+  word-wrap: break-word;
 }
 
 section li::before {
